# AIML

./: .gitignore  README.md
AgenticAI/01-langgraph/: 02-setup_envs.bat  2_1_tools_messages.ipynb
AgenticAI/01_ai_protocols/: .gitignore  readme.md
AgenticAI/05-aws-claud-bedrock/: 001_Api_Requests_complete.ipynb  001b_Api_Requests_complete.ipynb  002_System_Messages_complete.ipynb  005_Prompt_Evals.ipynb  005_Prompt_Evals_complete.ipynb  006_prompting_completed.ipynb  007_exercise.ipynb  008_tools.ipynb  008_tools_complete.ipynb  009_structured_data.ipynb  009_structured_data_complete.ipynb  010_text_editor_tool.ipynb  011_chunking.ipynb  012-embadding-example.ipynb  012_embeddings.ipynb  013_vectordb.ipynb  013_vectordb_completed.ipynb  013_vectordb_improve_search_result.ipynb  014_bm25.ipynb  015_hybrid.ipynb  015_hybrid_completed.ipynb  016_reranking.ipynb  017_contextual.ipynb  018_thinking_completed.ipynb  019_images_completed.ipynb  020_pdf.ipynb  021_pdf.ipynb  022_caching_completed.ipynb  command.txt  dataset-prompt-evaluator-prompting.json  dataset-prompt-evaluator.json  dataset-prompt-evaluator2.json  dataset.json  dataset2.json  dataset3.json  dataset4.json  main.py  output.html  output.json  readme.txt
AgenticAI/05_crew_ai/00_uv/uv-project2/: pyproject.toml
AgenticAI/09-rag-project/: Full_Code_NLP_RAG_Project_Notebook.ipynb
AgenticAI/appointment-management-system/: scheduling_agent.ipynb
ML/01-RestaurantTurnoverPrediction/: Submission.csv  restaurant_prediction.ipynb  slogon.txt
ML/02-hotel-cancellation/: INNHotelsGroup_newdata.csv  (+3 more)
(+81 files in other folders)
